--- a/index.html
+++ b/index.html
@@ -7,31 +7,42 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="top">
-            <div>Header Logo</div>
+    <div class="hero">
+        <div class="header">
+            <div class="logo">Moonlight Ocean</div>
             <ul>
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
         </div>
-        <div class="bottom">
-            <div class="info">
-                <div>This website is awesome</div>
-                <div>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <div>Sign up</div>
+        <div class="main">
+            <div>
+                <div class="text">This website is awesome</div>
+                <div class="second">this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="button">Sign up</div>
             </div>
             <img src="img/restaurant.jpg" alt="a lovely a view of the resturant with blue chairs">
         </div>
     </div>
     <div class="body">
-
+        <div>Some random information.</div>
+        <div class="recipes">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="quote">
+            <div><em>This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maube people will actually read it. Who knows? All I know is that it looks nice</em></div>
+            <div><strong>Thor, God of Thunder</div>
+        </div>
+        <div class="signup">
+            <div>Call to action! it's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
+            <div class="button">Sign up</div>
+        </div>
     </div>
-    <div class="quote">
-
-    </div>
-    <div class="signup"></div>
-    <div class="footer">copyright &#160 The Odin Project 2021</div>
+    <div class="footer">copyright &copy; The Odin Project 2021</div>
 </body>
 </html>
