--- a/index.html
+++ b/index.html
@@ -11,37 +11,49 @@
         <div class="header">
             <div class="logo">Moonlight Ocean</div>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Location</a></li>
+                <li><a href="#>">Contact Us</a></li>
             </ul>
         </div>
-        <div class="main">
-            <div>
-                <div class="text">This website is awesome</div>
+        <div class="title">
+            <div class="text">
+                <div class="main">This website is awesome</div>
                 <div class="second">this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <div class="button">Sign up</div>
+                <div class="button">Reserve now!</div>
             </div>
-            <img src="img/restaurant.jpg" alt="a lovely a view of the resturant with blue chairs">
+            <img src="img/restaurant.jpg" alt="a lovely a view of the restaurant with blue chairs">
         </div>
     </div>
-    <div class="body">
-        <div>Some random information.</div>
+    <div class="special">
+        <div class="info">Some random information.</div>
         <div class="recipes">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <img src="img/osyter.jpg" alt="">
+                <div>osyter</div>
+            </div>
+            <div>
+                <img src="img/soup.jpg" alt="">
+                <div>shrimp soup</div>
+            </div>
+            <div>
+                <img src="img/Seafood pasta.png" alt="">
+                <div>Seafood pasta</div>
+            </div>
+            <div>
+                <img src="img/salmon.jpg" alt="">
+                <div>https://pixabay.com/photos/salmon-fish-seafood-veggies-salad-518032/</div>
+            </div>
         </div>
-        <div class="quote">
-            <div><em>This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maube people will actually read it. Who knows? All I know is that it looks nice</em></div>
-            <div><strong>Thor, God of Thunder</div>
-        </div>
-        <div class="signup">
-            <div>Call to action! it's time!</div>
-            <div>Sign up for our product by clicking that button right over there!</div>
-            <div class="button">Sign up</div>
-        </div>
+    </div>
+    <div class="quote">
+        <div><em>This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maube people will actually read it. Who knows? All I know is that it looks nice</em></div>
+        <div><strong>Thor, God of Thunder</div>
+    </div>
+    <div class="signup">
+        <div>Call to action! it's time!</div>
+        <div>Sign up for our product by clicking that button right over there!</div>
+        <div class="button">Reserve now!</div>
     </div>
     <div class="footer">copyright &copy; The Odin Project 2021</div>
 </body>
