--- a/index.html
+++ b/index.html
@@ -42,19 +42,21 @@
             </div>
             <div>
                 <img src="img/salmon.jpg" alt="">
-                <div>https://pixabay.com/photos/salmon-fish-seafood-veggies-salad-518032/</div>
+                <div>Salmon</div>
             </div>
         </div>
     </div>
     <div class="quote">
-        <div><em>This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maube people will actually read it. Who knows? All I know is that it looks nice</em></div>
-        <div><strong>Thor, God of Thunder</div>
+        <div id="quote"><em>This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maube people will actually read it. Who knows? All I know is that it looks nice</em></div>
+        <div id="person"><strong>-Thor, God of Thunder</div>
     </div>
     <div class="signup">
-        <div>Call to action! it's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
+        <div>
+            <div>Call to action! it's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
         <div class="button">Reserve now!</div>
     </div>
-    <div class="footer">copyright &copy; The Odin Project 2021</div>
+    <div class="footer">Copyright &copy; The Odin Project 2021</div>
 </body>
 </html>
