Finished the style.css and index.html!

--- a/index.html
+++ b/index.html
@@ -13,49 +13,53 @@
             <ul>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Location</a></li>
-                <li><a href="#>">Contact Us</a></li>
+                <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
         <div class="title">
             <div class="text">
-                <div class="main">This website is awesome</div>
-                <div class="second">this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <div class="button">Reserve now!</div>
+                <div class="main">Moonlight Ocean Restaurant Est. 1994</div>
+                <div class="second">We take seafood seriously; so much that we insit on getting only the freshest catches. Bon Appetit!</div>
+                <div class="button"><a href="#">Reserve Now!</a></div>
             </div>
             <img src="img/restaurant.jpg" alt="a lovely a view of the restaurant with blue chairs">
         </div>
     </div>
     <div class="special">
-        <div class="info">Some random information.</div>
+        <div class="info">Today's Special!</div>
         <div class="recipes">
             <div>
-                <img src="img/osyter.jpg" alt="">
-                <div>osyter</div>
+                <img src="img/osyter.jpg" alt="A row of opened osyters on a plate">
+                <div> Eastern Dozen - $20</div>
+                <div class="description">Dozen shucked oysters from East Coast of Canada: Beausileil(NB), Black Magic(PEI), and Dixon Pt (NB) </div>
             </div>
             <div>
                 <img src="img/soup.jpg" alt="">
-                <div>shrimp soup</div>
+                <div>Shrimp Soup - $9</div>
+                <div class="description">Tomato vegetable broth with shrimp, morsels of fish</div>
             </div>
             <div>
-                <img src="img/Seafood pasta.png" alt="">
-                <div>Seafood pasta</div>
+                <img src="img/Seafood pasta.png" alt="a plate of seafood pasta">
+                <div>Seafood pasta - $28</div>
+                <div class="description">Fettuccine with mussels, shrimp, and a mix of daily fresh fish in a white wine cream sauce</div>
             </div>
             <div>
-                <img src="img/salmon.jpg" alt="">
-                <div>Salmon</div>
+                <img src="img/salmon.jpg" alt="a place of salmon with mixed vegetables">
+                <div>Grilled Salmon - $30</div>
+                <div class="description">Grilled salmon with lemon butter sauce with your choice of side dish</div>
             </div>
         </div>
     </div>
     <div class="quote">
-        <div id="quote"><em>This is an inspiring quote, or a testimonial form a customer. Maybe it's just filling up space, or maube people will actually read it. Who knows? All I know is that it looks nice</em></div>
-        <div id="person"><strong>-Thor, God of Thunder</div>
+        <div id="quote"><em>This squid is so undercooked, I can still hear it telling SpongeBob to f&%# off!!!</em></div>
+        <div id="person"><strong>-Gordon Ramsay</div>
     </div>
     <div class="signup">
         <div>
-            <div>Call to action! it's time!</div>
-            <div>Sign up for our product by clicking that button right over there!</div>
+            <div class="logo">Reservation recommended</div>
+            <div class="second">We do have bar seating available on a walk-in basis, but space is limited.</div>
         </div>
-        <div class="button">Reserve now!</div>
+        <div class="button two"><a href="#">Reserve Now!</a></div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project 2021</div>
 </body>
